Fix scrollbar
* Give body background colour
* Make input field smaller

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    background: #ccffaa ;
     margin: 0;
     padding: 0;
     border: 0;
@@ -15,7 +16,7 @@ body{
 
 }
 input{
-    background: #ccffaa ;
+    background:transparent;
     font-weight: lighter;
     color: #449944;
     position: absolute;
@@ -23,10 +24,10 @@ input{
     padding: 0;
     margin: 0;
     outline: none;
-    width: 100%;
-    height: 150vh;
     text-align: center;
-    transform: translateY(-50vh);
+    left: 50%;
+    top:30%;
+    transform: translate(-50%,-50%);
     font-size: 24pt;
 }
 p {
